--- a/index.html
+++ b/index.html
@@ -1,74 +1,98 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
-    <meta charset="UTF-8">
-    <title>Taller AJEF Jaques de Molay</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f2f2f2;
-            margin: 0;
-            padding: 0;
-        }
+  <meta charset="UTF-8">
+  <title>Taller AJEF Jaques de Molay</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #e6f4ea; /* verde claro */
+      color: #1a1a1a; /* texto oscuro */
+      margin: 0;
+      padding: 0;
+    }
 
-        header {
-            background-color: #007a33;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
+    header {
+      background-color: #007a33; /* verde AJEF */
+      color: white;
+      padding: 20px;
+      text-align: center;
+      overflow: hidden;
+    }
 
-        .logo {
-            width: 80px;
-            /* tamaño pequeño */
-            float: left;
-            /* coloca la imagen a la izquierda */
-            margin-right: 15px;
-            /* espacio entre la imagen y el texto */
-        }
+    .logo {
+      width: 80px;
+      float: left;
+      margin-right: 15px;
+    }
 
+    main {
+      padding: 20px;
+    }
 
-        main {
-            padding: 20px;
-        }
+    h2 {
+      color: #007a33;
+    }
 
-        footer {
-            background-color: #003366;
-            color: white;
-            text-align: center;
-            padding: 10px;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
-        }
-    </style>
+    ul {
+      list-style-type: square;
+    }
+
+    footer {
+      background-color: #007a33;
+      color: white;
+      text-align: center;
+      padding: 10px;
+      position: fixed;
+      width: 100%;
+      bottom: 0;
+    }
+
+    .btn-contacto {
+      display: inline-block;
+      margin-top: 20px;
+      padding: 10px 20px;
+      background-color: #c5a300; /* dorado claro */
+      color: white;
+      text-decoration: none;
+      border-radius: 5px;
+      font-weight: bold;
+    }
+
+    .btn-contacto:hover {
+      background-color: #a38800;
+    }
+  </style>
 </head>
-
 <body>
-    <header>
-        <img src="ajef_logo.jpg" alt="Logo del Taller AJEF Jaques de Molay" class="logo">
-        <h1>Taller AJEF Jaques de Molay</h1>
-        <p>Fraternidad, servicio y liderazgo juvenil</p>
-    </header>
 
+  <header>
+    <img src="ajef_logo.jpg" alt="Logo del Taller AJEF Jaques de Molay" class="logo">
+    <h1>Taller AJEF Jaques de Molay</h1>
+    <p>Fraternidad, servicio y liderazgo juvenil</p>
+  </header>
 
-    <main>
-        <h2>¿Quiénes somos?</h2>
-        <p>Somos un taller AJEF comprometido con los valores del liderazgo, el compañerismo y el servicio a la
-            comunidad.</p>
+  <main>
+    <h2>¿Quiénes somos?</h2>
+    <p>Somos un taller AJEF comprometido con los valores del liderazgo, el compañerismo y el servicio a la comunidad.</p>
 
-        <h2>Actividades</h2>
-        <ul>
-            <li>Reuniones semanales</li>
-            <li>Proyectos sociales</li>
-            <li>Talleres de liderazgo</li>
-        </ul>
-    </main>
+    <h2>Actividades</h2>
+    <ul>
+      <li>Reuniones semanales</li>
+      <li>Proyectos sociales</li>
+      <li>Talleres de liderazgo</li>
+    </ul>
 
-    <footer>
-        &copy; 2025 Taller AJEF Jaques de Molay. Todos los derechos reservados.
-    </footer>
+    <a href="https://wa.me/521XXXXXXXXXX" class="btn-contacto" target="_blank">Contáctanos por WhatsApp</a>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdEjemploFormularioXYZ/viewform" class="btn-contacto" target="_blank">
+  Formulario de ingreso
+</a>
+
+  </main>
+
+  <footer>
+    &copy; 2025 Taller AJEF Jaques de Molay. Todos los derechos reservados.
+  </footer>
+
 </body>
-
 </html>
