--- a/index.html
+++ b/index.html
@@ -4,89 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Taller AJEF Jaques de Molay</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #e6f4ea;
-            /* verde claro */
-            color: #1a1a1a;
-            /* texto oscuro */
-            margin: 0;
-            padding: 0;
-        }
-
-        header {
-            background-color: #007a33;
-            /* verde AJEF */
-            color: white;
-            padding: 20px;
-            text-align: center;
-            overflow: hidden;
-        }
-
-        .logo {
-            width: 80px;
-            float: left;
-            margin-right: 15px;
-        }
-
-        main {
-            padding: 20px;
-        }
-
-        h2 {
-            color: #007a33;
-        }
-
-        ul {
-            list-style-type: square;
-        }
-
-        footer {
-            background-color: #007a33;
-            color: white;
-            text-align: center;
-            padding: 10px;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
-        }
-
-        .btn-contacto {
-            display: inline-block;
-            margin-top: 20px;
-            padding: 10px 20px;
-            background-color: #c5a300;
-            /* dorado claro */
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-            font-weight: bold;
-        }
-
-        .btn-contacto:hover {
-            background-color: #a38800;
-        }
-
-        .carrusel {
-            position: relative;
-            max-width: 600px;
-            margin: 20px auto;
-            overflow: hidden;
-            border-radius: 15px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-        }
-
-        .carrusel img {
-            width: 100%;
-            display: none;
-            transition: opacity 1s ease-in-out;
-        }
-
-        .carrusel img.activo {
-            display: block;
-        }
-    </style>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Enlace al archivo CSS externo -->
+    <link rel="stylesheet" href="estilos.css">
+    <!-- Bootstrap JS y dependencias (opcional, para componentes interactivos) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 
 <body>
@@ -98,47 +22,78 @@
     </header>
 
     <main>
-        <h2>¿Quiénes somos?</h2>
-        <p>Somos un taller AJEF comprometido con los valores del liderazgo, el compañerismo y el servicio a la
-            comunidad.</p>
+        <div class="container">
+            <div class="row">
+                <!-- Columna 1: ¿Quiénes somos? + Botones -->
+                <div class="col-md-4">
+                    <h2>¿Quiénes somos?</h2>
+                    <p style="text-align: justify;">
+                        Somos el Taller AJEF Jacques de Molay de Toluca, perteneciente al Oriente del Valle de México.
+                        Formamos jóvenes líderes comprometidos con la fraternidad, el compañerismo y el servicio
+                        comunitario, basados en valores masónicos. La AJEF, creada como cuerpo auxiliar de la masonería,
+                        impulsa el desarrollo ético y social de la juventud. Nuestro nombre honra a Jacques de Molay,
+                        último Gran Maestre templario, símbolo de honor y sacrificio.
+                    </p>
 
-        <h2>Galería de Actividades</h2>
-        <div class="carrusel">
-            <img src="img1.jpg" alt="Actividad 1" class="activo">
-            <img src="img2.jpg" alt="Actividad 2">
-            <img src="img3.jpg" alt="Actividad 3">
+
+                    <!-- Botones debajo del texto -->
+                    <div class="d-grid gap-2 mt-3 mb-5">
+                        <a href="https://wa.me/521XXXXXXXXXX" class="btn btn-success" target="_blank">
+                            <i class="bi bi-whatsapp"></i> Contáctanos por WhatsApp
+                        </a>
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdEjemploFormularioXYZ/viewform"
+                            class="btn btn-primary" target="_blank">
+                            <i class="bi bi-pencil-square"></i> Formulario de ingreso
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Columna 2: Galería -->
+                <div class="col-md-4">
+                    <h2>Galería de Actividades</h2>
+                    <div class="carrusel">
+                        <img src="img1.jpg" alt="Actividad 1" class="activo">
+                        <img src="img2.jpg" alt="Actividad 2">
+                        <img src="img3.jpg" alt="Actividad 3">
+                    </div>
+                </div>
+
+                <!-- Columna 3: Actividades -->
+                <!-- Columna 3: ¿Por qué unirte? -->
+                <div class="col-md-4">
+                    <h2>¿Por qué unirte?</h2>
+                    <p class="text-justify">
+                        Unirte a la Asociación Jóvenes Esperanza de la Fraternidad es una oportunidad única para crecer
+                        como líder y contribuir a tu comunidad. Aquí encontrarás un espacio de apoyo, aprendizaje y
+                        amistad, donde cada joven puede desarrollar sus habilidades y valores como la fraternidad, el
+                        compromiso y el servicio. Formar parte de este grupo te permitirá participar en proyectos
+                        sociales que impactan positivamente, además de vivir experiencias que fortalecen tu carácter y
+                        te preparan para enfrentar retos futuros. ¡Ven y sé parte del cambio que deseas ver en el mundo,
+                        construyendo juntos un futuro mejor!
+                    </p>
+
+                </div>
+
+            </div>
         </div>
-
-        <h2>Actividades</h2>
-        <ul>
-            <li>Reuniones semanales</li>
-            <li>Proyectos sociales</li>
-            <li>Talleres de liderazgo</li>
-        </ul>
-
-        <a href="https://wa.me/521XXXXXXXXXX" class="btn-contacto" target="_blank">Contáctanos por WhatsApp</a>
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdEjemploFormularioXYZ/viewform" class="btn-contacto"
-            target="_blank">
-            Formulario de ingreso
-        </a>
-
     </main>
+
 
     <footer>
         &copy; 2025 Taller AJEF Jaques de Molay. Todos los derechos reservados.
     </footer>
     <script>
-  const imagenes = document.querySelectorAll('.carrusel img');
-  let index = 0;
+        const imagenes = document.querySelectorAll('.carrusel img');
+        let index = 0;
 
-  function mostrarSiguienteImagen() {
-    imagenes[index].classList.remove('activo');
-    index = (index + 1) % imagenes.length;
-    imagenes[index].classList.add('activo');
-  }
+        function mostrarSiguienteImagen() {
+            imagenes[index].classList.remove('activo');
+            index = (index + 1) % imagenes.length;
+            imagenes[index].classList.add('activo');
+        }
 
-  setInterval(mostrarSiguienteImagen, 3000); // cambia cada 3 segundos
-</script>
+        setInterval(mostrarSiguienteImagen, 3000); // cambia cada 3 segundos
+    </script>
 
 </body>
 
