--- a/index.html
+++ b/index.html
@@ -1,100 +1,122 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Taller AJEF Jaques de Molay</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Enlace al archivo CSS externo -->
     <link rel="stylesheet" href="estilos.css">
-    <!-- Bootstrap JS y dependencias (opcional, para componentes interactivos) -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 </head>
-
 <body>
-
     <header>
-        <img src="ajef_logo.jpg" alt="Logo del Taller AJEF Jaques de Molay" class="logo">
+        <img src="ajef_logo.jpg" alt="Logo" class="logo">
         <h1>Taller AJEF Jaques de Molay</h1>
         <p>Fraternidad, servicio y liderazgo juvenil</p>
+        <span class="hamburger">☰</span>
+        <nav>
+            <ul>
+                <li><a href="#quienes-somos">¿Quiénes somos?</a></li>
+                <li><a href="#galeria">Galería</a></li>
+                <li><a href="#por-que-unirte">¿Por qué unirte?</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <main>
-        <div class="container">
-            <div class="row">
-                <!-- Columna 1: ¿Quiénes somos? + Botones -->
-                <div class="col-md-4">
-                    <h2>¿Quiénes somos?</h2>
-                    <p style="text-align: justify;">
-                        Somos el Taller AJEF Jacques de Molay de Toluca, perteneciente al Oriente del Valle de México.
-                        Formamos jóvenes líderes comprometidos con la fraternidad, el compañerismo y el servicio
-                        comunitario, basados en valores masónicos. La AJEF, creada como cuerpo auxiliar de la masonería,
-                        impulsa el desarrollo ético y social de la juventud. Nuestro nombre honra a Jacques de Molay,
-                        último Gran Maestre templario, símbolo de honor y sacrificio.
-                    </p>
-
-
-                    <!-- Botones debajo del texto -->
-                    <div class="d-grid gap-2 mt-3 mb-5">
-                        <a href="https://wa.me/521XXXXXXXXXX" class="btn btn-success" target="_blank">
-                            <i class="bi bi-whatsapp"></i> Contáctanos por WhatsApp
-                        </a>
-                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdEjemploFormularioXYZ/viewform"
-                            class="btn btn-primary" target="_blank">
-                            <i class="bi bi-pencil-square"></i> Formulario de ingreso
-                        </a>
-                    </div>
-                </div>
-
-                <!-- Columna 2: Galería -->
-                <div class="col-md-4">
-                    <h2>Galería de Actividades</h2>
-                    <div class="carrusel">
-                        <img src="img1.jpg" alt="Actividad 1" class="activo">
-                        <img src="img2.jpg" alt="Actividad 2">
-                        <img src="img3.jpg" alt="Actividad 3">
-                    </div>
-                </div>
-
-                <!-- Columna 3: Actividades -->
-                <!-- Columna 3: ¿Por qué unirte? -->
-                <div class="col-md-4">
-                    <h2>¿Por qué unirte?</h2>
-                    <p class="text-justify">
-                        Unirte a la Asociación Jóvenes Esperanza de la Fraternidad es una oportunidad única para crecer
-                        como líder y contribuir a tu comunidad. Aquí encontrarás un espacio de apoyo, aprendizaje y
-                        amistad, donde cada joven puede desarrollar sus habilidades y valores como la fraternidad, el
-                        compromiso y el servicio. Formar parte de este grupo te permitirá participar en proyectos
-                        sociales que impactan positivamente, además de vivir experiencias que fortalecen tu carácter y
-                        te preparan para enfrentar retos futuros. ¡Ven y sé parte del cambio que deseas ver en el mundo,
-                        construyendo juntos un futuro mejor!
-                    </p>
-
-                </div>
-
-            </div>
-        </div>
-    </main>
-
-
-    <footer>
-        &copy; 2025 Taller AJEF Jaques de Molay. Todos los derechos reservados.
-    </footer>
     <script>
-        const imagenes = document.querySelectorAll('.carrusel img');
-        let index = 0;
+        document.addEventListener('DOMContentLoaded', function() {
+            const hamburger = document.querySelector('.hamburger');
+            const nav = document.querySelector('nav');
+            const images = document.querySelectorAll('.carrusel img');
+            let currentIndex = 0;
 
-        function mostrarSiguienteImagen() {
-            imagenes[index].classList.remove('activo');
-            index = (index + 1) % imagenes.length;
-            imagenes[index].classList.add('activo');
-        }
+            // Hamburger menu toggle
+            if (hamburger && nav) {
+                hamburger.addEventListener('click', function() {
+                    nav.classList.toggle('active');
+                });
+            }
 
-        setInterval(mostrarSiguienteImagen, 3000); // cambia cada 3 segundos
+            // Carousel initialization and rotation
+            function showImage(index) {
+                if (images.length === 0) return;
+                images.forEach(img => img.classList.remove('activo'));
+                images[index].classList.add('activo');
+            }
+
+            if (images.length > 0) {
+                showImage(currentIndex);
+                setInterval(() => {
+                    currentIndex = (currentIndex + 1) % images.length;
+                    showImage(currentIndex);
+                }, 3000);
+            }
+        });
     </script>
 
-</body>
+    <main>
+        <section id="quienes-somos">
+            <h2>¿Quiénes somos?</h2>
+            <p class="text-justify">
+                Somos el Taller AJEF Jacques de Molay de Toluca, perteneciente al Oriente del Valle de México.
+                Formamos jóvenes líderes comprometidos con la fraternidad, el compañerismo y el servicio
+                comunitario, basados en valores masónicos. La AJEF, creada como cuerpo auxiliar de la masonería,
+                impulsa el desarrollo ético y social de la juventud. Nuestro nombre honra a Jacques de Molay,
+                último Gran Maestre templario, símbolo de honor y sacrificio.
+            </p>
+            <a href="https://wa.me/message/4SMQXMXYVY3VD1" class="btn-contacto">Contáctanos por WhatsApp</a>
+            <a href="https://forms.gle/PKZVS7DSxMehSKoD7" class="btn-contacto">Formulario de ingreso</a>
+        </section>
 
+        <section id="galeria">
+            <h2>Galería de Actividades</h2>
+            <div class="carrusel">
+                <img src="img01.jpg" alt="Actividad 1" class="activo">
+                <img src="img02.jpg" alt="Actividad 2">
+                <img src="img03.jpg" alt="Actividad 3">
+                <img src="img04.jpg" alt="Actividad 4">
+                <img src="img05.jpg" alt="Actividad 5">
+                <img src="img06.jpg" alt="Actividad 6">
+                <img src="img07.jpg" alt="Actividad 7">
+                <img src="img08.jpg" alt="Actividad 8">
+                <img src="img09.jpg" alt="Actividad 9">
+                <img src="img10.jpg" alt="Actividad 10">
+                <img src="img11.jpg" alt="Actividad 11">
+                <img src="img12.jpg" alt="Actividad 12">
+                <img src="img13.jpg" alt="Actividad 13">
+                <img src="img14.jpg" alt="Actividad 14">
+                <img src="img15.jpg" alt="Actividad 15">
+                <img src="img16.jpg" alt="Actividad 16">
+                <img src="img17.jpg" alt="Actividad 17">
+                <img src="img18.jpg" alt="Actividad 18">
+                <img src="img19.jpg" alt="Actividad 19">
+                <img src="img20.jpg" alt="Actividad 20">
+                <img src="img21.jpg" alt="Actividad 21">
+                <img src="img22.jpg" alt="Actividad 22">
+                <img src="img23.jpg" alt="Actividad 23">
+                <img src="img24.jpg" alt="Actividad 24">
+                <img src="img25.jpg" alt="Actividad 25">
+                <img src="img26.jpg" alt="Actividad 26">
+                <img src="img27.jpg" alt="Actividad 27">
+                <img src="img28.jpg" alt="Actividad 28">
+                <img src="img29.jpg" alt="Actividad 29">
+            </div>
+        </section>
+
+        <section id="por-que-unirte">
+            <h2>¿Por qué unirte?</h2>
+            <p class="text-justify">
+                Unirte a la Asociación Jóvenes Esperanza de la Fraternidad es una oportunidad única para crecer
+                como líder y contribuir a tu comunidad. Aquí encontrarás un espacio de apoyo, aprendizaje y
+                amistad, donde cada joven puede desarrollar sus habilidades y valores como la fraternidad, el
+                compromiso y el servicio. Formar parte de este grupo te permitirá participar en proyectos
+                sociales que impactan positivamente, además de vivir experiencias que fortalecen tu carácter y
+                te preparan para enfrentar retos futuros. ¡Ven y sé parte del cambio que deseas ver en el mundo,
+                construyendo juntos un futuro mejor!
+            </p>
+        </section>
+    </main>
+
+    <footer>
+        <p>© 2025 Taller AJEF Jaques de Molay. Todos los derechos reservados.</p>
+    </footer>
+</body>
 </html>
