--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
         <h1>Taller AJEF Jaques de Molay</h1>
         <p>Fraternidad, servicio y liderazgo juvenil</p>
         <span class="hamburger">☰</span>
-        <nav>
-            <ul>
-                <li><a href="#quienes-somos">¿Quiénes somos?</a></li>
-                <li><a href="#galeria">Galería</a></li>
-                <li><a href="#por-que-unirte">¿Por qué unirte?</a></li>
-            </ul>
-        </nav>
     </header>
 
+    <nav>
+        <ul>
+            <li><a href="#quienes-somos">¿Quiénes somos?</a></li>
+            <li><a href="#galeria">Galería</a></li>
+            <li><a href="#por-que-unirte">¿Por qué unirte?</a></li>
+        </ul>
+    </nav>
+
+    <script src="carousel.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             const hamburger = document.querySelector('.hamburger');
             const nav = document.querySelector('nav');
-            const images = document.querySelectorAll('.carrusel img');
-            let currentIndex = 0;
 
             // Hamburger menu toggle
             if (hamburger && nav) {
@@ -34,26 +34,11 @@
                     nav.classList.toggle('active');
                 });
             }
-
-            // Carousel initialization and rotation
-            function showImage(index) {
-                if (images.length === 0) return;
-                images.forEach(img => img.classList.remove('activo'));
-                images[index].classList.add('activo');
-            }
-
-            if (images.length > 0) {
-                showImage(currentIndex);
-                setInterval(() => {
-                    currentIndex = (currentIndex + 1) % images.length;
-                    showImage(currentIndex);
-                }, 3000);
-            }
         });
     </script>
 
-    <main>
-        <section id="quienes-somos">
+    <main id="quienes-somos">
+        <section id="about">
             <h2>¿Quiénes somos?</h2>
             <p class="text-justify">
                 Somos el Taller AJEF Jacques de Molay de Toluca, perteneciente al Oriente del Valle de México.
@@ -69,40 +54,44 @@
         <section id="galeria">
             <h2>Galería de Actividades</h2>
             <div class="carrusel">
-                <img src="img01.jpg" alt="Actividad 1" class="activo">
-                <img src="img02.jpg" alt="Actividad 2">
-                <img src="img03.jpg" alt="Actividad 3">
-                <img src="img04.jpg" alt="Actividad 4">
-                <img src="img05.jpg" alt="Actividad 5">
-                <img src="img06.jpg" alt="Actividad 6">
-                <img src="img07.jpg" alt="Actividad 7">
-                <img src="img08.jpg" alt="Actividad 8">
-                <img src="img09.jpg" alt="Actividad 9">
-                <img src="img10.jpg" alt="Actividad 10">
-                <img src="img11.jpg" alt="Actividad 11">
-                <img src="img12.jpg" alt="Actividad 12">
-                <img src="img13.jpg" alt="Actividad 13">
-                <img src="img14.jpg" alt="Actividad 14">
-                <img src="img15.jpg" alt="Actividad 15">
-                <img src="img16.jpg" alt="Actividad 16">
-                <img src="img17.jpg" alt="Actividad 17">
-                <img src="img18.jpg" alt="Actividad 18">
-                <img src="img19.jpg" alt="Actividad 19">
-                <img src="img20.jpg" alt="Actividad 20">
-                <img src="img21.jpg" alt="Actividad 21">
-                <img src="img22.jpg" alt="Actividad 22">
-                <img src="img23.jpg" alt="Actividad 23">
-                <img src="img24.jpg" alt="Actividad 24">
-                <img src="img25.jpg" alt="Actividad 25">
-                <img src="img26.jpg" alt="Actividad 26">
-                <img src="img27.jpg" alt="Actividad 27">
-                <img src="img28.jpg" alt="Actividad 28">
-                <img src="img29.jpg" alt="Actividad 29">
+                <div class="carousel-container">
+                    <img src="img01.jpg" alt="Actividad 1">
+                    <img src="img02.jpg" alt="Actividad 2">
+                    <img src="img03.jpg" alt="Actividad 3">
+                    <img src="img04.jpg" alt="Actividad 4">
+                    <img src="img05.jpg" alt="Actividad 5">
+                    <img src="img06.jpg" alt="Actividad 6">
+                    <img src="img07.jpg" alt="Actividad 7">
+                    <img src="img08.jpg" alt="Actividad 8">
+                    <img src="img09.jpg" alt="Actividad 9">
+                    <img src="img10.jpg" alt="Actividad 10">
+                    <img src="img11.jpg" alt="Actividad 11">
+                    <img src="img12.jpg" alt="Actividad 12">
+                    <img src="img13.jpg" alt="Actividad 13">
+                    <img src="img14.jpg" alt="Actividad 14">
+                    <img src="img15.jpg" alt="Actividad 15">
+                    <img src="img16.jpg" alt="Actividad 16">
+                    <img src="img17.jpg" alt="Actividad 17">
+                    <img src="img18.jpg" alt="Actividad 18">
+                    <img src="img19.jpg" alt="Actividad 19">
+                    <img src="img20.jpg" alt="Actividad 20">
+                    <img src="img21.jpg" alt="Actividad 21">
+                    <img src="img22.jpg" alt="Actividad 22">
+                    <img src="img23.jpg" alt="Actividad 23">
+                    <img src="img24.jpg" alt="Actividad 24">
+                    <img src="img25.jpg" alt="Actividad 25">
+                    <img src="img26.jpg" alt="Actividad 26">
+                    <img src="img27.jpg" alt="Actividad 27">
+                    <img src="img28.jpg" alt="Actividad 28">
+                    <img src="img29.jpg" alt="Actividad 29">
+                </div>
+                <button class="carousel-prev">❮</button>
+                <button class="carousel-next">❯</button>
             </div>
         </section>
 
-        <section id="por-que-unirte">
-            <h2>¿Por qué unirte?</h2>
+        <section >
+            <h2 id="por-que-unirte">¿Por qué unirte?</h2>
             <p class="text-justify">
                 Unirte a la Asociación Jóvenes Esperanza de la Fraternidad es una oportunidad única para crecer
                 como líder y contribuir a tu comunidad. Aquí encontrarás un espacio de apoyo, aprendizaje y
